k8s-deploy/rbac-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-fate
  labels:
    name: kube-fate
